# bookstore

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: build.yml  workflow-pr.yml
asyncviews/: db.sqlite3
asyncviews/asyncviews/: settings.py  urls.py  views.py
bookstore/: db.sqlite3  pyproject.toml  requirements.txt  settings.py  urls.py
bookstore/bookstore/: settings.py
order/: factories.py
order/models/: order.py
order/serializers/: order_serialize.py
order/tests/: __init__.py  factory.py  test_order_viewset.py
order/viewsets/: order_viewset.py
product/: urls.py
product/serializers/: category_serialize.py  product_serialize.py
product/tests/: __init__.py  factory.py  test_category_viewset.py  test_category_viewsetpy  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
